--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,28 +5,14 @@ eureka.client.serviceUrl.defaultZone=http://192.168.10.243:1111/eureka
 
 # 每隔2s发送心跳
 eureka.instance.lease-renewal-interval-in-seconds=2
-# 5s未检测到心跳将退出
+# 4s未检测到心跳将退出
 eureka.instance.lease-expiration-duration-in-seconds=4
 
-
-c3p0.jdbcUrl=jdbc:oracle:thin:@192.168.10.242:1521:orcl
-#测试库
-#c3p0.user=xyzs_test
-#正式库
-c3p0.user=XYZS_PLAT2
-c3p0.password=1
-c3p0.driverClass=oracle.jdbc.driver.OracleDriver
-c3p0.minPoolSize=20
-c3p0.maxPoolSize=100
-c3p0.maxIdleTime=3600
-c3p0.acquireIncrement=3
-c3p0.maxStatements=1000
-c3p0.initialPoolSize=10
-c3p0.idleConnectionTestPeriod=60
-c3p0.acquireRetryAttempts=30
-c3p0.acquireRetryDelay=1000
-c3p0.breakAfterAcquireFailure=false
-c3p0.testConnectionOnCheckout=false
+#配置数据源
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@192.168.10.242:1521:orcl
+spring.datasource.username=xyzs_test
+spring.datasource.password=1
 
 #mybatis配置
 mybatis.mapper-locations=classpath:mapper/*.xml
@@ -42,3 +28,6 @@ FTP.PASSWORD=5HVjwjVJdxm+tJF3uluuXQ==
 FTP.BASEPATH=/home/ftpuser/images
 #图片服务器相关配置
 IMAGE.BASE.URL=http://jsxyzs.com.cn:8088/files/
+
+
+tm.manager.url=http://localhost:7000/tx/manager/
