工人模块，服务提供者

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,4 @@ FTP.BASEPATH=/home/ftpuser/images
 IMAGE.BASE.URL=http://jsxyzs.com.cn:8088/files/
 
 
-tm.manager.url=http://localhost:7000/tx/manager/
+tm.manager.url=http://192.168.10.243:7000/tx/manager/
