工人模块，服务提供者(二次封装)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.password=1
 
 #mybatisÅäÖÃ
 mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=cn.xyzs.api.pojo
+mybatis.type-aliases-package=cn.xyzs.common.pojo
 #Êä³ösqlÓï¾ä
 #logging.level.cn.xyzs.api.mapper=debug
 
