工人模块，服务提供者(二次封装)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.password=1
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=cn.xyzs.common.pojo
 # ‰≥ˆsql”Ôæ‰
-#logging.level.cn.xyzs.api.mapper=debug
+logging.level.cn.xyzs.api.worker.mapper=debug
 
 #ftpœ‡πÿ≈‰÷√
 FTP.ADDRESS=http://jsxyzs.com.cn:8088/files/
@@ -31,3 +31,15 @@ IMAGE.BASE.URL=http://jsxyzs.com.cn:8088/files/
 
 
 tm.manager.url=http://192.168.10.243:7000/tx/manager/
+
+
+# activeMQ
+spring.activemq.user=admin
+spring.activemq.password=admin
+spring.activemq.broker-url=tcp://192.168.10.243:61616
+spring.activemq.pool.enabled=true
+spring.activemq.pool.max-connections=100
+
+queueName: publish.queue
+topicName: publish.topic
+
